fixed image not showing up

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -130,7 +130,7 @@ picture{
 }
 
 img {
-    padding: 5px;
+    padding: 15px;
 }
 
 .post-wrapper {
